# LLM-MRI

./: .gitignore  .readthedocs.yaml  LICENSE.md  LLM_MRI.py  README.md  Treatment.py  pyproject.toml  requirements.txt  setup.py  test.py
binder/: requirements.txt
dataset/: animals.csv
dataset/dataset_encoded.hf/: cache-07097b6e2ec06f3a.arrow  cache-072b512972ed9a52.arrow  cache-0f101e06dd102239.arrow  cache-12ed210ce32bfa71.arrow  cache-148e1ceb130ccc6b.arrow  cache-184614e22dd7f274.arrow  cache-1ec597bb6c44cbce.arrow  cache-1f787a5b30104987.arrow  cache-22233d0946eaaf5c.arrow  cache-29f96900ad31fff5.arrow  cache-35ae28239de3bda9.arrow  cache-3b75f61290079913.arrow  cache-3e8432c974149376.arrow  cache-417a1e0343449876.arrow  cache-41cc54127c653eea.arrow  cache-46575c50c167996e.arrow  cache-4c0377195dc5a3dc.arrow  cache-54de6b6f1cc5ccac.arrow  cache-560e5e60e60439da.arrow  cache-56b61221a56667ba.arrow  cache-5869c39547662061.arrow  cache-5aab36b7e0eeb2ea.arrow  cache-5d83e658c274415c.arrow  cache-5eb27e0d1fd552b5.arrow  cache-61209b45b9ad0207.arrow  cache-64dc973c0d5e267b.arrow  cache-6663d0c85fd2a8b1.arrow  cache-6794253d09b467f7.arrow  cache-6b4a33456c871e05.arrow  cache-6d080e6349598f4f.arrow  cache-771c1fc56951ca26.arrow  cache-82f528228b3ea7fb.arrow  cache-85480756c0bddc32.arrow  cache-85b13845864fb8f1.arrow  cache-86f2f481f004e689.arrow  cache-8c8790f67f3d7db2.arrow  (+39 more)
dataset/fake/: 1.txt  (+16 more)
docs/: conf.py  index.rst  llm_mri.rst  modules.rst  src.rst
examples/: Animals.ipynb  Animals.py  Emotions.ipynb  FakeNews.py  Papers.ipynb  complete_hidden_state.pt  full_graph.edgelist  full_hs_5.pt  full_hs_6.pt  graph__.csv  graph_true_fake.csv  reduced_hidden_state.pt  reduced_hs.pt  saved_grouped_graph.csv
llm_mri/: ActivationAreas.py  Evaluation.py  LLM_MRI.py  Metrics.py  Treatment.py  __init__.py
src/: LLM_MRI.py  Treatment.py
tests/: Papers_Test.ipynb  results_bert-base-.csv  results_distilbert.csv
visualization/: README.md  pyproject.toml
visualization/src/: LLM_MRI.py  PreviousImplementation.py  Treatment.py
visualization/src/dataset_encoded.hf/: data-00000-of-00001.arrow  dataset_info.json  state.json
(+83 files in other folders)
