[tool.poetry]
name = "llm_mri"
version = "0.1.3"
description = "Package to visualize LLM's Neural Networks activation regions"
authors = ["lipecorradini <luizfelipecorradini@gmail.com>"]
readme = "README.md"
packages = [
    { include = "llm_mri" }
]


[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
datasets = "^2.19.1"
transformers = "^4.41.0"
sklearn-preprocessing = "^0.1.0"
matplotlib = "^3.9.0"
pydot = "^2.0.0"
networkx = "^3.3"
graphviz = "^0.20.3"
pygraphviz = "^1.13"
torch = "^2.3.1"
seaborn = "^0.13.2"
umap-learn = "^0.5.6"
pyqt6 = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
